# data-default-generics

./: README.md  data-default-generics.cabal
src/Data/Default/: Generics.hs
test/: DataDefaultGenericsSpec.hs
